# pythontemplate

./: .dir-locals.el  .flake8  .gitlint  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  README.rst  README.rst~  install.py  mypy.ini  pyproject.toml  pythontemplate-runner.py  requirements.txt  setup.py
docs/: about.rst  conf.py  index.rst
pythontemplate/: __main__.py  calendar_events.py  pythontemplate.py  pythontemplate.py~
tests/: context.py  test_calendar_events.py
