[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="pythontemplate"
version="1.0.0"
authors = [
  { name="Mats Gustafsson", email="matsgus71@gmail.com" },
]
description = "My Python template"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "package_1",
]
[project.scripts]
fetch-articles = "pythontemplate.<script_1>:main"
